--- a/www/index.html
+++ b/www/index.html
@@ -504,15 +504,15 @@
                 <form ng-controller="Config">
                   <div align="center" class="msg" id="msgconfig">{{msg}}</div>
                   <ul class="list">
-                    <ion-toggle ng-model="promocoes.checked" ng-change="NotificationChange(1)">
+                    <ion-toggle ng-model="promocoes" ng-change="ConfigChange()">
                       Promoções de outros bares
                     </ion-toggle>
                     
-                    <ion-toggle ng-model="gps.checked" ng-change="NotificationChange(2)">
+                    <ion-toggle ng-model="gps" ng-change="ConfigChange()">
                       GPS
                     </ion-toggle>
 
-                    <ion-toggle ng-model="visibilidade.checked" ng-change="NotificationChange(3)">
+                    <ion-toggle ng-model="visibilidade" ng-change="ConfigChange()">
                       Visibilidade pública
                     </ion-toggle>
                   </ul>
