alteração de 'usuario' para 'email'

--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
                   <br>
                   <ion-list>
                       <label class="item item-input label-index">
-                          <input class="placeholder" id="usuario" name="usuario" type="email" placeholder="Usuário" ng-model="email" >
+                          <input class="placeholder" id="usuario" name="usuario" type="email" placeholder="Email" ng-model="email" >
                       </label>
                       <label class="item item-input label-index">
                           <input class="placeholder" id="senha" name="senha" type="password" placeholder="Senha" ng-model="senha" >
