--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     
     <script src="js/upload.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/mask.min.js"></script>
     <script src="js/Ctrl_AddBar.js"></script>
     <script src="js/Ctrl_AddAmigo.js"></script>
     <script src="js/Ctrl_Amigos.js"></script>
@@ -560,7 +561,7 @@
             <div class="item item-avatar">
               <img src="{{bar.logo.thumb.url}}">
               <h2>{{bar.name}}</h2>
-              <p>{{bar.phone}}</p>
+              <p><a href="tel:+558432181881">{{bar.phone}}</a></p>
             </div>
 
             <div class="item item-body">
@@ -568,6 +569,7 @@
               <p>
                 {{bar.city}} - {{bar.state}}<br>
                 {{bar.district}} - {{bar.street}}, {{bar.number}}
+                <a href = "{{bar.site}}">{{bar.site}}</a>
               </p>
             </div>
 
