Novo padrão de mascara para telefone

--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
                         <input class="placeholder" type="email" placeholder="Email" ng-model="email">
                     </label>
                     <label class="item item-input label-index">
-                        <input class="placeholder" type="text" placeholder="Celular" mask="(99) 9 9999-9999" clean="false" ng-model="phone">
+                        <input class="placeholder" type="text" placeholder="Celular" mask="(99) 99999-9999" clean="false" ng-model="phone">
                     </label>
                     <label class="item item-input label-index">
                         <input class="placeholder" type="text" placeholder="CPF" mask="999.999.999-99" clean="false" ng-model="cpf">
@@ -468,7 +468,7 @@
                     <input type="text" placeholder="Nome" ng-model="name" >
                 </label>
                 <label class="item item-input">
-                    <input type="text" placeholder="Telefone" mask="(99) 9 9999-9999" clean="false" ng-model="phone" >
+                    <input type="text" placeholder="Telefone" mask="(99) 99999-9999" clean="false" ng-model="phone" >
                 </label>
                 <label class="item item-input">
                     <input type="text" placeholder="Estado" ng-model="state" >
