--- a/www/index.html
+++ b/www/index.html
@@ -401,6 +401,17 @@
             </div>
 
             <div class="row">
+              <div class="col">
+                <label class="item item-checkbox">
+                  <span class="input-label">Cartão Secreto </span>
+                  <label class="checkbox">
+                    <input type="checkbox" ng-model="secreto">
+                  </label>
+                </label>
+              </div>
+            </div>
+
+            <div class="row">
               <div class="col col-80">
                 <div class="item range range-positive">
                   <input type="range" name="doses" min="0" max="20" value="1" ng-model="doses">
