Diretiva para ter foco

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/Ctrl_Promocoes.js"></script>
     <script src="js/Ctrl_Sidebar.js"></script>
     <script src="js/Service_Chat.js"></script>
+    <script src="js/diretivas.js"></script>
     <script src="js/funcoes.js"></script>
     
   </head>
@@ -63,7 +64,7 @@
                   <br>
                   <ion-list>
                       <label class="item item-input label-index">
-                          <input class="placeholder" id="usuario" name="usuario" type="email" placeholder="Email" ng-model="email" >
+                          <input class="placeholder" id="usuario" name="usuario" type="email" placeholder="Email" ng-model="email" auto-focus>
                       </label>
                       <label class="item item-input label-index">
                           <input class="placeholder" id="senha" name="senha" type="password" placeholder="Senha" ng-model="senha" >
