Informar versão do app

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,7 @@
 
               <form ng-submit="submit()" ng-controller="LoginForm" class="login">
                   <div align="center" class="msg" id="msghome" ng-model="checked">
+                    {{version}}</br>
                     <ion-spinner icon="lines" class="spinner-stable" ng-show="checked"></ion-spinner>{{msg}}
                   </div>
                   <br>
