--- a/www/index.html
+++ b/www/index.html
@@ -203,6 +203,9 @@
             </div>
           </div>
         </ion-content>
+        <div class="bar bar-footer button-event" ng-click="openModal()">
+          <div class="title">Check-in</div>
+        </div>
       </ion-view>
     </script>
 
@@ -227,6 +230,32 @@
           </div>
         </ion-content>
       </ion-view>
+    </script>
+
+    <script id="my-modal.html" type="text/ng-template">
+      <ion-modal-view>
+        <ion-header-bar>
+          <h1 class="title">Check-in</h1>
+          <div class="buttons">
+            <button class="button button-clear ion-close-circled" ng-click="closeModal()"></button>
+          </div>
+        </ion-header-bar>
+        <ion-content>
+          Vou fazer uma tela melhor<br><br>
+          <span align="center">Realize o seu check-in em um bar:</span>
+          <label class="item item-input item-select">
+            <div class="input-label">
+              Bar
+            </div>
+            <select ng-model="bar" ng-options="bar.id as bar.name for bar in Bares">
+              <option value="">Escolha o bar</option>
+            </select>
+          </label>
+          <button class="button button-block button-event" ng-click="checkin(bar)">
+            Check-in
+          </button>
+        </ion-content>
+      </ion-modal-view>
     </script>
 
     <script id="cartao" type="text/ng-template">
