Correção do campo da foto

--- a/www/index.html
+++ b/www/index.html
@@ -670,14 +670,14 @@
             
             <div class="row">
               <div class='col'>
-                <img ng-src="{{imgDrink}}" height="300" width="100%">
+                <img ng-src="{{imgDrink}}" width="100%">
                 <button ng-click="capturePhoto(1)" class="button button-positive">Tirar Foto da Bebida</button>
               </div>
             </div> 
 
             <div class="row">
               <div class="col">
-                <img ng-src="{{imgCard}}" height="300" width="100%">
+                <img ng-src="{{imgCard}}" width="100%">
                 <button ng-click="capturePhoto(2)" class="button button-positive">Tirar Foto do Cartão</button>
               </div>
             </div>
