--- a/www/index.html
+++ b/www/index.html
@@ -533,11 +533,11 @@
           <ion-content padding="true" class="has-header">
             <ion-refresher on-refresh="doRefresh()"></ion-refresher>
             <label class="item item-input busca">
-              <input type="text" ng-model="search.bar_name" placeholder = "Buscar">
+              <input type="text" ng-model="busca" id="busca" placeholder = "Buscar">
             </label>
             <div class=" card">
             <div align="center" class="msg" id="msgpromocoes">{{msg}}</div>
-              <div class="item item-text-wrap" ng-repeat="module in Promocoes | filter:search:strict">
+              <div class="item item-text-wrap" ng-repeat="module in Promocoes | filter:FiltroTags">
                 <h2 align="center">{{module.bar_name}}</h2>
                 <h3>{{module.title}}</h3>
                 <img class="full-image" src="{{module.avatar.avatar.url}}">
