correção da busca de promoções

--- a/www/index.html
+++ b/www/index.html
@@ -533,7 +533,7 @@
           <ion-content padding="true" class="has-header">
             <ion-refresher on-refresh="doRefresh()"></ion-refresher>
             <label class="item item-input busca">
-              <input type="text" ng-model="busca" id="busca" placeholder = "Buscar">
+              <input type="text" ng-model="data.busca" id="busca" placeholder = "Buscar">
             </label>
             <div class=" card">
             <div align="center" class="msg" id="msgpromocoes">{{msg}}</div>
