correção dos campos de fotos e tbm add a ultima foto na tela de updateCartão

--- a/www/index.html
+++ b/www/index.html
@@ -745,6 +745,18 @@
                 <button ng-click="capturePhoto(2)" class="button button-positive">Tirar Foto do Cartão</button>
               </div>
             </div>
+
+            <div class="row">
+              <div class='col'>
+                <img ng-src="{{imgDrinkOld}}" height="300" width="100%">
+              </div>
+            </div> 
+
+            <div class="row">
+              <div class="col">
+                <img ng-src="{{imgCardOld}}" height="300" width="100%">
+              </div>
+            </div>
             <br>
             <input type="submit" value="Salvar" ng-click="submitcartao()" class="button button-event button-block" enctype="multipart/form-data" />
           </form>
