abrir link do site em um brower

--- a/www/index.html
+++ b/www/index.html
@@ -442,7 +442,7 @@
               <p>
                 {{bar.city}} - {{bar.state}}<br>
                 {{bar.district}} - {{bar.street}}, {{bar.number}}<br>
-                <a href = "{{bar.site}}" class="button button-clear button-positive">{{bar.site}}</a>
+                <a href = "#" class="button button-clear button-positive" ng-click="link(bar.site)">{{bar.site}}</a>
               </p>
             </div>
 
